[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/SlideSelect.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/gui/PlayerSelect.gd" type="Script" id=2]
[ext_resource path="res://assets/gunner-black.png" type="Texture" id=3]
[ext_resource path="res://assets/gunner-green.png" type="Texture" id=4]
[ext_resource path="res://assets/gunner-red.png" type="Texture" id=5]
[ext_resource path="res://assets/gunner-yellow.png" type="Texture" id=6]
[ext_resource path="res://assets/gunner-blue.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_bottom = 5.0

[node name="PlayerSelect" type="PanelContainer"]
margin_left = -0.793701
margin_top = 0.793701
margin_right = 511.206
margin_bottom = 300.794
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 3.0
margin_top = 3.0
margin_right = 509.0
margin_bottom = 297.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 500.0
margin_bottom = 289.0

[node name="TeamColor" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 495.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BLACK" type="TextureRect" parent="MarginContainer/VBoxContainer/TeamColor"]
margin_left = 223.0
margin_right = 271.0
margin_bottom = 48.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RED" type="TextureRect" parent="MarginContainer/VBoxContainer/TeamColor"]
visible = false
margin_left = 223.0
margin_right = 271.0
margin_bottom = 48.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BLUE" type="TextureRect" parent="MarginContainer/VBoxContainer/TeamColor"]
visible = false
margin_left = 223.0
margin_right = 271.0
margin_bottom = 48.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YELLOW" type="TextureRect" parent="MarginContainer/VBoxContainer/TeamColor"]
visible = false
margin_left = 223.0
margin_right = 271.0
margin_bottom = 48.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GREEN" type="TextureRect" parent="MarginContainer/VBoxContainer/TeamColor"]
visible = false
margin_left = 223.0
margin_right = 271.0
margin_bottom = 48.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TeamSelect" parent="MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 52.0
margin_right = 495.0
margin_bottom = 68.0

[node name="JoinKey" type="Label" parent="MarginContainer"]
visible = false
margin_left = 5.0
margin_top = 131.0
margin_right = 500.0
margin_bottom = 162.0
text = "Press any key
to join"
align = 1
[connection signal="value_changed" from="MarginContainer/VBoxContainer/TeamSelect" to="." method="_on_TeamSelect_value_changed"]
